# meetily

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  RELEASE_NOTES_v0.5.0.md
.github/: pull_request_template.md
.github/workflows/: asr-benchmark.yml  i18n-check.yml
backend/app/: transcript_postprocess.py  transcript_processor.py
backend/whisper-cpp-server/assets/: audio
docs/: INDEX.md  asr_benchmark_zh.md  asr_postprocess.md  diarization_zh.md  hotword_highlight.md  hotword_hitrate.md  llm_postprocess.md  postprocess_zh.md  recovery_retry_zh.md  recovery_zh.md  ui_timestamp_jump.md
docs/AIDocs/: github-issue-next-release-findings.md
docs/i18n/: README.md  glossary.md
docs/superpowers/plans/: 2026-07-10-stability-wave8.md  2026-07-10-zh-cn-i18n-wave1.md  2026-07-10-zh-cn-i18n-wave2.md  2026-07-10-zh-cn-i18n-wave3.md  2026-07-10-zh-cn-i18n-wave4.md  2026-07-10-zh-cn-i18n-wave5.md  2026-07-10-zh-cn-i18n-wave6.md  2026-07-10-zh-cn-i18n-wave7.md  2026-07-13-i18n-wave9.md  2026-07-13-recognition-wave10.md  2026-07-15-asr-hotwords-ui.md  2026-07-16-asr-benchmark-custom.md  2026-07-16-hotword-highlight-ui.md  2026-07-16-postprocess-ner-protection.md  2026-07-16-postprocess-rust-cjk.md  (+21 more)
frontend/: next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/scripts/: check-i18n.ts  generate-baseline.js  i18n-known-gaps.txt
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/tests/: setup.ts
scripts/asr_benchmark/: benchmark.py  generate_report.py  run_ci_eval.ps1  run_ci_eval.sh  test_benchmark.py
(+346 files in other folders)
